# Aurobox

./: .env.example  .gitignore  CUsersy134venvScriptsactivate.bat.txt  README.md  REPORT.md  REPORT_2.md  examples.py  migrate_add_case_closed_column.py  migrate_add_door_assigned_at_column.py  migrate_add_package_count_column.py  migrate_add_pending_pickup_notified_column.py  migrate_add_redispatch_columns.py  migrate_add_return_door_columns.py  migrate_add_scheduled_pickup_at_column.py  migrate_add_stop_dispatched_at_column.py  note.txt  pyproject.toml  requirements.txt  run.py  start-ngrok.bat  start-server.bat
app/: config.py  db.py  init_db.py  line_messaging.py  line_verify.py  main.py  models.py
docs/: 0710 初步架構規劃.md
reference/: 260629 Pudu API.ipynb  普渡三支狀態API實測-flashbotmax-260707.md
scripts/: check_db.py  read_maps_and_position.py
src/aurobox/: __init__.py  api.py  api_ge.py  app.py  app_ge.py  cli.py  config.py  manager.py  models.py  models_ge.py  pudu_client.py  robot.py  services.py  tasks.py  utils.py  webhooks.py
tests/: conftest.py  load_test.py  pudu_api_test.ipynb  test_api_integration.py  test_config.py  test_pudu_client.py
